--- a/template.yaml
+++ b/template.yaml
@@ -26,8 +26,8 @@ Resources:
       Handler: lambda_function.lambda_handler
       Runtime: python3.6
       CodeUri:
-        Bucket: CodeBucketName
-        Key: CodeKey
+        Bucket: !Ref CodeBucketName
+        Key: !Ref CodeKey
       Policies:
       - S3CrudPolicy:
           BucketName: !Ref ImageBucketName
