--- a/template.yaml
+++ b/template.yaml
@@ -2,12 +2,6 @@ AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 
 Parameters:
-  CodeBucketName:
-    Type: String
-    Description: S3 Bucket that holds your lambda code
-  CodeKey:
-    Type: String
-    Description: Lambda code and supporting packages in .zip format
   ImageBucketName:
     Type: String
     Description: Provide a unique bucket name to create a new bucket to hold your
@@ -26,8 +20,8 @@ Resources:
       Handler: lambda_function.lambda_handler
       Runtime: python3.6
       CodeUri:
-        Bucket: !Ref CodeBucketName
-        Key: !Ref CodeKey
+        Bucket: #Bucketname Goes Here#
+        Key: #Lambda deployment package name#
       Policies:
       - S3CrudPolicy:
           BucketName: !Ref ImageBucketName
